--- a/tutorial.html
+++ b/tutorial.html
@@ -23,17 +23,19 @@
       require(["esri/config", "esri/Map", "esri/views/MapView"], function(esriConfig, Map, MapView) {
 
         esriConfig.apiKey = "AAPK7af051b3940b4031b5307c866c49cd4dQOds8QzM5Zra67z2f0LGTljXo4ut3oTLl5z4y-aAZ5HyzxTw0XKoa0YUm8NIt3iC";
+      const map = new Map({
+        basemap: "arcgis-topographic" // Basemap layer
+      });
 
-        const map = new Map({
-          basemap: "arcgis/topographic" // basemap styles service
-        });
-
-        const view = new MapView({
-          map: map,
-          center: [-118.805, 34.027], // Longitude, latitude
-          zoom: 13, // Zoom level
-          container: "viewDiv" // Div element
-        });
+      const view = new MapView({
+        map: map,
+        center: [-118.805, 34.027],
+        zoom: 13, // scale: 72223.819286
+        container: "viewDiv",
+        constraints: {
+          snapToZoom: false
+        }
+      });
 
       });
     </script>
