--- a/tutorial.html
+++ b/tutorial.html
@@ -24,7 +24,7 @@
 
         esriConfig.apiKey = "AAPK7af051b3940b4031b5307c866c49cd4dQOds8QzM5Zra67z2f0LGTljXo4ut3oTLl5z4y-aAZ5HyzxTw0XKoa0YUm8NIt3iC";
       const map = new Map({
-        basemap: "streets-vector" // Basemap layer
+        basemap: "arcgis/topographic" // Basemap layer
       });
 
       const view = new MapView({
