--- a/tutorial.html
+++ b/tutorial.html
@@ -22,7 +22,7 @@
     <script>
       require(["esri/config", "esri/Map", "esri/views/MapView","esri/Graphic",
     "esri/layers/GraphicsLayer"
-        ], function(esriConfig, Map, MapView) {
+        ], function(esriConfig, Map, MapView, Graphic, GraphicsLayer) {
 
         esriConfig.apiKey = "AAPK7af051b3940b4031b5307c866c49cd4dQOds8QzM5Zra67z2f0LGTljXo4ut3oTLl5z4y-aAZ5HyzxTw0XKoa0YUm8NIt3iC";
       const map = new Map({
