--- a/tutorial.html
+++ b/tutorial.html
@@ -37,92 +37,91 @@
       const view = new MapView({
         map: map,
         center: [-118.805, 34.027],
-        zoom: 13, // scale: 72223.819286
+        zoom: 13,
         container: "viewDiv",
         constraints: {
           snapToZoom: false
         }
       });
-      const graphicsLayer = new GraphicsLayer();
-        map.add(graphicsLayer);
 
-      });
-      const point = { //Create a point
+      const graphicsLayer = new GraphicsLayer();
+      map.add(graphicsLayer);
+
+      // Point Graphic
+      const point = {
         type: "point",
         longitude: -118.80657463861,
         latitude: 34.0005930608889
-    };
-    const simpleMarkerSymbol = {
+      };
+      const simpleMarkerSymbol = {
         type: "simple-marker",
-        color: [226, 119, 40],  // Orange
+        color: [226, 119, 40], // Orange
         outline: {
-            color: [255, 255, 255], // White
-            width: 1
+          color: [255, 255, 255], // White
+          width: 1
         }
-     };
-     const pointGraphic = new Graphic({
-      geometry: point,
-      symbol: simpleMarkerSymbol
-     });
-     graphicsLayer.add(pointGraphic);
+      };
+      const pointGraphic = new Graphic({
+        geometry: point,
+        symbol: simpleMarkerSymbol
+      });
+      graphicsLayer.add(pointGraphic);
 
-     const polyline = {
-    type: "polyline",
-    paths: [
-        [-118.821527826096, 34.0139576938577], //Longitude, latitude
-        [-118.814893761649, 34.0080602407843], //Longitude, latitude
-        [-118.808878330345, 34.0016642996246]  //Longitude, latitude
-    ]
-  };
+      // Polyline Graphic
+      const polyline = {
+        type: "polyline",
+        paths: [
+          [-118.821527826096, 34.0139576938577],
+          [-118.814893761649, 34.0080602407843],
+          [-118.808878330345, 34.0016642996246]
+        ]
+      };
       const simpleLineSymbol = {
-          type: "simple-line",
-          color: [226, 119, 40], // Orange
-          width: 2
+        type: "simple-line",
+        color: [226, 119, 40], // Orange
+        width: 2
       };
       const polylineGraphic = new Graphic({
-          geometry: polyline,
-          symbol: simpleLineSymbol
+        geometry: polyline,
+        symbol: simpleLineSymbol
       });
       graphicsLayer.add(polylineGraphic);
-      // Create a polygon geometry
+
+      // Polygon Graphic
       const polygon = {
-          type: "polygon",
-          rings: [
-              [-118.818984489994, 34.0137559967283], //Longitude, latitude
-              [-118.806796597377, 34.0215816298725], //Longitude, latitude
-              [-118.791432890735, 34.0163883241613], //Longitude, latitude
-              [-118.79596686535, 34.008564864635],   //Longitude, latitude
-              [-118.808558110679, 34.0035027131376]  //Longitude, latitude
-          ]
+        type: "polygon",
+        rings: [
+          [-118.818984489994, 34.0137559967283],
+          [-118.806796597377, 34.0215816298725],
+          [-118.791432890735, 34.0163883241613],
+          [-118.79596686535, 34.008564864635],
+          [-118.808558110679, 34.0035027131376]
+        ]
       };
-
       const simpleFillSymbol = {
-          type: "simple-fill",
-          color: [227, 139, 79, 0.8],  // Orange, opacity 80%
-          outline: {
-              color: [255, 255, 255],
-              width: 1
-          }
+        type: "simple-fill",
+        color: [227, 139, 79, 0.8], // Orange, opacity 80%
+        outline: {
+          color: [255, 255, 255],
+          width: 1
+        }
       };
-
+      const attributes = {
+        Name: "Graphic",
+        Description: "I am a polygon"
+      };
+      const popupTemplate = {
+        title: "{Name}",
+        content: "{Description}"
+      };
       const polygonGraphic = new Graphic({
         geometry: polygon,
         symbol: simpleFillSymbol,
         attributes: attributes,
         popupTemplate: popupTemplate
-        });
-        graphicsLayer.add(polygonGraphic);
-
-      const popupTemplate = {
-    title: "{Name}",
-    content: "{Description}"
- }
-      const attributes = {
-          Name: "Graphic",
-          Description: "I am a polygon"
-      }
-
-
+      });
+      graphicsLayer.add(polygonGraphic);
+   
 
     </script>
 
