--- a/valentinemap.html
+++ b/valentinemap.html
@@ -39,9 +39,9 @@
         }
       });
       const view = new MapView({
-        container: "viewDiv",
-        map: webmap
-      });
+         map: webmap,  // The WebMap instance created above
+        container: "viewDiv"
+        });
 
     });
   </script>
