--- a/valentinemap.html
+++ b/valentinemap.html
@@ -40,6 +40,8 @@
       });
       const view = new MapView({
          map: webmap,  // The WebMap instance created above
+         center: [-79.6455, 43.6015],
+        zoom: 13,
         container: "viewDiv"
         });
 
