--- a/valentinemap.html
+++ b/valentinemap.html
@@ -22,13 +22,9 @@
   <script>
     require([
       "esri/config",
-      "esri/Map",
       "esri/views/MapView",
-      "esri/Graphic",
-      "esri/layers/GraphicsLayer",
-      "esri/layers/FeatureLayer",
       "esri/WebMap"
-    ], function(esriConfig, Map, MapView, Graphic, GraphicsLayer, FeatureLayer, WebMap) {
+    ], function(esriConfig, MapView, WebMap) {
 
       esriConfig.apiKey = "AAPK7af051b3940b4031b5307c866c49cd4dQOds8QzM5Zra67z2f0LGTljXo4ut3oTLl5z4y-aAZ5HyzxTw0XKoa0YUm8NIt3iC";
 
