--- a/valentinemap.html
+++ b/valentinemap.html
@@ -14,6 +14,50 @@
       height: 100%;
       width: 100%;
     }
+      #map {
+        height: 100%;
+        margin:100px;
+        position:relative;
+        margin-top: 50px;
+      }
+      html, body {
+        font-family: Arial, Helvetica, sans-serif;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+
+      .background { 
+        background-color:rgb(170,204,230);
+        }
+
+        .header { 
+          margin-top: 75px; 
+          margin-left: 50px;
+          margin-right: 100px;
+          margin-bottom: 75px; 
+          display: inline-block; 
+          padding: 20px;
+          background-color: rgba(255, 255, 255, 0.6);
+          color: rgb(6,62,105);
+          font-size: 20px;
+
+        }
+        .headerdate{
+          display: inline-block; 
+          color: rgb(6,62,105);
+          font-size: 20px;
+        }
+      
+        .description{
+          padding-left: 170px;
+          padding-right: 170px;
+          margin-top: 50px;
+          text-align: center;
+          font-size: 20px;
+          color:rgb(6,62,105);
+        }
+    </style>
   </style>
 
   <link rel="stylesheet" href="https://js.arcgis.com/4.28/esri/themes/light/main.css">
@@ -45,6 +89,15 @@
   </script>
 </head>
 <body>
+    <header>
+        <div class="background">
+          <div class="header">
+            <h1>Where to buy Chocolates in Mississauga? </h1>
+            <div class = "headerdate">
+            <p>Dec 25, 2023 - Jan 22, 2024</p>
+          </div>
+        </div>
+      </header>
   <div id="viewDiv"></div>
 </body>
 </html>
