--- a/valentinemap.html
+++ b/valentinemap.html
@@ -79,7 +79,7 @@
     <header>
         <div class="background">
           <div class="header">
-            <h1>Where to buy Chocolates in Mississauga? </h1>
+            <h1>Where to buy chocolates in Mississauga? </h1>
         </div>
       </header>
   <div id="viewDiv"></div>
